# Happycapy-skills

./: README.md  SKILL.md
skills/canvas-design/: README.md
skills/claude-code-templates/: README.md  SKILL.md
skills/film-creator/: README.md  SKILL.md
skills/goplaces/: README.md
skills/happycapy-skill-creator/: README.md  SKILL.md  pyproject.toml  requirements.txt
skills/happycapy-skill-creator/references/: bugfixes.md  happycapy-environment.md
skills/happycapy-skill-creator/scripts/: ai_gateway.py  auto_fix.py  auto_fix_improved.py  check_compatibility.py  clone_skill.py  create_skill.py  find_skills_integration.py  integrate_feature.py  package_skill.py  search_implementation.py  semantic_search.py  test_skill.py
skills/happycapy-skill-creator/tests/: test_docker_compatibility.py  test_semantic_search.py  test_timeout_handling.py
skills/nano-banana-pro/: README.md  SKILL.md
skills/nano-banana-pro/scripts/: generate_image.py
skills/redbook-creator-publish/: README.md  description_de.txt  description_es.txt  description_fr.txt  description_ja.txt  description_ko.txt
skills/resume-assistant/: README.md  SKILL.md
